tests/lean/reflect_type_defeq.lean.expected.out
reflect_type_defeq.lean:2:0: error: equation type mismatch, term
  x
has type
  reflected ℕ 3
but is expected to have type
  reflected (list ℕ) [10]
